logs/data-bench.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/data_bench'...
Listing './lib/python3.5/site-packages/data_bench/agents'...
Listing './lib/python3.5/site-packages/data_bench/data_model'...
Compiling './lib/python3.5/site-packages/data_bench/data_model/schemas.py'...
***   File "./lib/python3.5/site-packages/data_bench/data_model/schemas.py", line 108
    [f'CV_ACCOUNT_{x}' for x in range(0, _maxAccounts)],
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/data_bench/data_model/table.py'...
***   File "./lib/python3.5/site-packages/data_bench/data_model/table.py", line 121
    raise ValueError(f'{value} not found')
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/data_bench/schema'...
Listing './lib/python3.5/site-packages/data_bench/utility'...
Listing './lib/python3.5/site-packages/data_bench-0.4.3.dist-info'...
Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka/consumer'...
Listing './lib/python3.5/site-packages/kafka/coordinator'...
Listing './lib/python3.5/site-packages/kafka/coordinator/assignors'...
Listing './lib/python3.5/site-packages/kafka/metrics'...
Listing './lib/python3.5/site-packages/kafka/metrics/stats'...
Listing './lib/python3.5/site-packages/kafka/partitioner'...
Listing './lib/python3.5/site-packages/kafka/producer'...
Listing './lib/python3.5/site-packages/kafka/protocol'...
Listing './lib/python3.5/site-packages/kafka/serializer'...
Listing './lib/python3.5/site-packages/kafka/vendor'...
Listing './lib/python3.5/site-packages/kafka-1.3.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
